--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
     <main>
         <header>
             <h1>Curso em Vídeo </h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTMl com CSS3</h2>
+            <img src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A obcaecati nemo ducimus dignissimos excepturi quisquam possimus sint officiis illo magni, atque veritatis dolor, sapiente alias dolore impedit omnis maxime odit?</p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img src="imagens/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi molestiae cupiditate fugit ad corrupti culpa, incidunt quidem hic quo aliquam id obcaecati possimus a nihil labore commodi, debitis minus officiis?</p>
         </article>
     </main>
