--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <h2>Curso de HTML5 com CSS3</h2>
             <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML5">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A obcaecati nemo ducimus dignissimos excepturi quisquam possimus sint officiis illo magni, atque veritatis dolor, sapiente alias dolore impedit omnis maxime odit?</p>
-            <p><a href="">Acesse o Curso de HTML5</a></p>
+            <p><a href="curso-html.html">Acesse o Curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
             <img class="lado" src="imagens/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi molestiae cupiditate fugit ad corrupti culpa, incidunt quidem hic quo aliquam id obcaecati possimus a nihil labore commodi, debitis minus officiis?</p>
-            <p><a href="">Acesse o Curso de JavaScript</a></p>
+            <p><a href="curso-js.html">Acesse o Curso de JavaScript</a></p>
         </article>
     </main>
     
